--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -16,9 +14,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameActivity"></activity>
-        <activity android:name=".RankActivity"></activity>
-        <activity android:name=".GameRulesActivity"></activity>
+        <activity android:name=".GameActivity">
+
+        </activity>
+        <activity android:name=".RankActivity">
+
+        </activity>
+        <activity android:name=".GameRulesActivity">
+
+        </activity>
     </application>
 
 </manifest>
